--- a/deployment/docker/dev/api-platform/xdebug/xdebug.ini
+++ b/deployment/docker/dev/api-platform/xdebug/xdebug.ini
@@ -5,6 +5,7 @@ xdebug.remote_autostart=1
 xdebug.remote_connect_back=0
 xdebug.idekey=editor-xdebug
 ;xdebug.client_host=127.0.0.1
+;xdebug.remote_host=172.17.0.1
 xdebug.remote_host=172.17.0.1
 xdebug.mode=debug
 
