--- a/api-platform/config/routes.yaml
+++ b/api-platform/config/routes.yaml
@@ -1,3 +1,10 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+#book_post_publication:
+#  path: /books/{id}/publication
+#  methods: ['POST']
+#  defaults:
+#    _controller: App\Controller\BookController::createPublication
+#    _api_resource_class: App\Entity\Offer
+#    _api_item_operation_name: post_publication
