--- a/deployment/nginx/api-platform.conf
+++ b/deployment/nginx/api-platform.conf
@@ -4,7 +4,8 @@ server {
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /home/apps/api-platform/public;
-
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
     
     location / { 
 	    try_files $uri $uri/ /index.php$is_args$args;
