--- a/api-platform/config/services.yaml
+++ b/api-platform/config/services.yaml
@@ -20,5 +20,7 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\DataPersister\AccauntDataPersister:
+        decorates: 'api_platform.doctrine.orm.data_persister'
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
