--- a/api-platform/config/services.yaml
+++ b/api-platform/config/services.yaml
@@ -23,5 +23,8 @@ services:
     App\DataPersister\AccauntDataPersister:
 #        decorates: 'api_platform.doctrine.orm.data_persister'
         tags: [ 'api_platform.data_persister' ]
+
+    'App\Serializer\ApiNormalizer':
+        decorates: 'api_platform.jsonld.normalizer.item'
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
