--- a/api-platform/composer.json
+++ b/api-platform/composer.json
@@ -84,6 +84,7 @@
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "5.4.*",
         "symfony/css-selector": "5.4.*",
+        "symfony/maker-bundle": "^1.42",
         "symfony/phpunit-bridge": "^6.0"
     }
 }
