--- a/api-platform/config/packages/security.yaml
+++ b/api-platform/config/packages/security.yaml
@@ -17,6 +17,7 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            custom_authenticator: App\Security\ApiKeyAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
